--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: SALUT LES POTES ON PEUT CHANGER LE TITRE
+subtitle: YES ON PEUT CHANGER LE TEXTE TROP BIEN 
 ---
