--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
-title: SALUT LES POTES ON PEUT CHANGER LE TITRE
-subtitle: YES ON PEUT CHANGER LE TEXTE TROP BIEN 
+title: Racism and political orientation
+subtitle: Is racial bias in police stops affected by a state's major political party?
 ---
